Think about how to visualize the data from the model output

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,89 +2,258 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (329256765.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/wg/bd6gkggs51b4d1lbpsbxnw0r0000gn/T/ipykernel_12975/329256765.py\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    from /modules import cobra\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import copy \n",
-    "import pandas as pd\n",
-    "import sys\n",
-    "mport cobra"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scaling...\n",
-      " A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\n",
-      "Problem data seem to be well scaled\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Load Model\n",
-    "mainPATH = '/Users/ivanlizat/Documents/devel/folderForGit/PseudomonasPutidaCobraPy'\n",
-    "relativModelPATH = mainPATH + '/MatlabExportedModels'\n",
-    "''' \n",
-    "iJN1462_GLC_UR10_9_main     =   cobra.io.read_sbml_model( relativModelPATH + '/iJN1462_GLC_UR10_9.xml')\n",
-    "iJN1462_GLC_UR6_3_main      =   cobra.io.read_sbml_model( relativModelPATH + '/iJN1462_GLC_UR6_3.xml')\n",
-    "iJN1462_GLC_UR7_3_main      =   cobra.io.read_sbml_model( relativModelPATH + '/iJN1462_GLC_UR7_3.xml')\n",
-    "'''\n",
-    "\n",
-    "iJN1462_OCT_UR3_4_main      =   cobra.io.read_sbml_model(relativModelPATH + '/iJN1462_OCT_UR3_4.xml')\n",
-    "'''\n",
-    "iJN1462_GLC_UR10_9          =   copy.deepcopy(iJN1462_GLC_UR10_9_main)\n",
-    "iJN1462_GLC_UR6_3           =   copy.deepcopy(iJN1462_GLC_UR6_3_main)\n",
-    "iJN1462_GLC_UR7_3           =   copy.deepcopy(iJN1462_GLC_UR7_3_main)\n",
-    "iJN1462_GLN_UR5_1           =   copy.deepcopy(iJN1462_GLN_UR5_1_main)\n",
-    "'''\n",
-    "iJN1462_OCT_UR3_4           =   copy.deepcopy(iJN1462_OCT_UR3_4_main)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = \"all\""
+    "import os\n",
+    "from importlib import import_module\n",
+    "import copy \n",
+    "import pandas as pd\n",
+    "import sys\n",
+    "import cobra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load Models if not already in RAM\n",
+    "if 'modelList' not in locals():\n",
+    "    #Load Model\n",
+    "    mainPATH = '/Users/ivanlizat/Documents/devel/folderForGit/PseudomonasPutidaCobraPy'\n",
+    "    relativModelPATH = mainPATH + '/MatlabExportedModels'\n",
+    "\n",
+    "    iJN1462_GLC_UR10_9_main     =   cobra.io.read_sbml_model(relativModelPATH + '/iJN1462_GLC_UR10_9.xml')\n",
+    "    iJN1462_GLC_UR6_3_main      =   cobra.io.read_sbml_model(relativModelPATH + '/iJN1462_GLC_UR6_3.xml')\n",
+    "    iJN1462_GLN_UR5_1_main      =   cobra.io.read_sbml_model(relativModelPATH + '/iJN1462_GLN_UR5_1.xml')\n",
+    "    iJN1462_GLC_UR7_3_main      =   cobra.io.read_sbml_model(relativModelPATH + '/iJN1462_GLC_UR7_3.xml')\n",
+    "    iJN1462_OCT_UR3_4_main      =   cobra.io.read_sbml_model(relativModelPATH + '/iJN1462_OCT_UR3_4.xml')\n",
+    "\n",
+    "    iJN1462_GLC_UR10_9          =   copy.deepcopy(iJN1462_GLC_UR10_9_main)\n",
+    "    iJN1462_GLC_UR6_3           =   copy.deepcopy(iJN1462_GLC_UR6_3_main)\n",
+    "    iJN1462_GLC_UR7_3           =   copy.deepcopy(iJN1462_GLC_UR7_3_main)\n",
+    "    iJN1462_GLN_UR5_1           =   copy.deepcopy(iJN1462_GLN_UR5_1_main)\n",
+    "    iJN1462_OCT_UR3_4           =   copy.deepcopy(iJN1462_OCT_UR3_4_main)\n",
+    "    \n",
+    "    modelList = [iJN1462_GLC_UR10_9, iJN1462_GLC_UR6_3, iJN1462_GLC_UR7_3, iJN1462_GLN_UR5_1, iJN1462_OCT_UR3_4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n"
-     ]
+     "data": {
+      "text/html": [
+       "<h3>Objective</h3><p>1.0 BIOMASS_KT2440_WT3 = 0.3080197410845628</p><h4>Uptake</h4><table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Metabolite</th>\n",
+       "      <th>Reaction</th>\n",
+       "      <th>Flux</th>\n",
+       "      <th>C-Number</th>\n",
+       "      <th>C-Flux</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>nh4[e]</td>\n",
+       "      <td>EX_nh4_e</td>\n",
+       "      <td>3.099</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>o2[e]</td>\n",
+       "      <td>EX_o2_e</td>\n",
+       "      <td>9.052</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>octa[e]</td>\n",
+       "      <td>EX_octa_e</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>100.00%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>pi[e]</td>\n",
+       "      <td>EX_pi_e</td>\n",
+       "      <td>0.2368</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>PHAg[c]</td>\n",
+       "      <td>SK_PHAg_c</td>\n",
+       "      <td>0.9403</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><h4>Secretion</h4><table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Metabolite</th>\n",
+       "      <th>Reaction</th>\n",
+       "      <th>Flux</th>\n",
+       "      <th>C-Number</th>\n",
+       "      <th>C-Flux</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>C80aPHA[c]</td>\n",
+       "      <td>DM_C80aPHA_c</td>\n",
+       "      <td>-0.9403</td>\n",
+       "      <td>8</td>\n",
+       "      <td>42.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>R_3hocta[e]</td>\n",
+       "      <td>EX_R_3hocta_e</td>\n",
+       "      <td>-0.8238</td>\n",
+       "      <td>8</td>\n",
+       "      <td>36.82%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ac[e]</td>\n",
+       "      <td>EX_ac_e</td>\n",
+       "      <td>-0.1473</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.65%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>co2[e]</td>\n",
+       "      <td>EX_co2_e</td>\n",
+       "      <td>-3.492</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19.51%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>h2o[e]</td>\n",
+       "      <td>EX_h2o_e</td>\n",
+       "      <td>-11.48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<cobra.summary.model_summary.ModelSummary at 0x7f8f94290b80>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<h3>Objective</h3><p>1.0 BIOMASS_KT2440_WT3 = 0.3080197410845628</p><h4>Uptake</h4><table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Metabolite</th>\n",
+       "      <th>Reaction</th>\n",
+       "      <th>Flux</th>\n",
+       "      <th>C-Number</th>\n",
+       "      <th>C-Flux</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>nh4[e]</td>\n",
+       "      <td>EX_nh4_e</td>\n",
+       "      <td>3.099</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>o2[e]</td>\n",
+       "      <td>EX_o2_e</td>\n",
+       "      <td>9.052</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>octa[e]</td>\n",
+       "      <td>EX_octa_e</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>100.00%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><h4>Secretion</h4><table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Metabolite</th>\n",
+       "      <th>Reaction</th>\n",
+       "      <th>Flux</th>\n",
+       "      <th>C-Number</th>\n",
+       "      <th>C-Flux</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>co2[e]</td>\n",
+       "      <td>EX_co2_e</td>\n",
+       "      <td>-3.492</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100.00%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>h2o[e]</td>\n",
+       "      <td>EX_h2o_e</td>\n",
+       "      <td>-11.48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<cobra.summary.model_summary.ModelSummary at 0x7f8f716493d0>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from cobrapy.src import cobra\n",
+    "\n",
+    "def createOutput(modelList):\n",
+    "    pass\n",
+    "    df =  pd.DataFrame\n",
+    "    for model in modelList:\n",
+    "        df.join(model)\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "#createOutput(modelList)       \n",
+    "\n",
+    "\n",
     "#das gesamte Paket als \n",
-    "df = iJN1462_OCT_UR3_4.summary().to_frame()\n",
-    "print(type(df))"
+    "#df = iJN1462_OCT_UR3_4.summary().to_frame()\n",
+    "\n",
+    "iJN1462_OCT_UR3_4.tolerance = 1e-1\n",
+    "#iJN1462_OCT_UR3_4.summary()\n",
+    "#dhtml =de.to_html()\n",
+    "#df = pd.read_html(dhtml)\n",
+    "#pd.DataFrame(df[1]).sort_values('C-Flux',ascending=False)\n",
+    "#df[1]\n",
+    "#\n",
+    "#de\n",
+    "iJN1462_OCT_UR3_4.summary()\n",
+    "iJN1462_OCT_UR3_4._tolerance = 2\n",
+    "iJN1462_OCT_UR3_4.summary()\n",
+    "\n"
    ]
   }
  ],
