--- a/Main.ipynb
+++ b/Main.ipynb
@@ -17,29 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scaling...\n",
-      " A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\n",
-      "Problem data seem to be well scaled\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['iJN1462_GLC_UR10_9', 'iJN1462_GLC_UR6_3'])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Load Models if not already in RAM\n",
     "\n",
@@ -47,8 +27,7 @@
     "\n",
     "nameList = ['iJN1462_GLC_UR10_9.xml' , 'iJN1462_GLC_UR6_3.xml']\n",
     "if 'modelDict' not in locals():\n",
-    "    modelDict = extFunc.ImportFunction(nameList)\n",
-    "    \n",
+    "    modelDict = extFunc.ImportFunction(nameList)   \n",
     "modelDict.keys()\n"
    ]
   },
@@ -84,9 +63,16 @@
     "                                           }\n",
     "    \n",
     "    def mySummary(self):\n",
-    "       \n",
-    "       return summardf\n",
-    "   \n",
+    "        df2 = pd.DataFrame(\n",
+    "            {\n",
+    "    \"A\": self.summaryDict[model].fluxes.getby,\n",
+    "    \"B\": pd.Timestamp(\"20130102\"),\n",
+    "    \"C\": pd.Series(1, index=list(range(4)), dtype=\"float32\"),\n",
+    "    \"E\": pd.Categorical([\"test\", \"train\", \"test\", \"train\"]),\n",
+    "    \"F\": \"foo\",\n",
+    "            }\n",
+    "        )\n",
+    "    return df2\n",
     "          \n",
     "\n",
     "if 'comp' not in locals():\n",
@@ -95,67 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = comp.dataFrameDict['iJN1462_GLC_UR10_9']['uptake']\n",
-    "\n",
-    "\n",
-    "def createOutput(comp):\n",
-    "  df2 = pd.DataFrame(  \n",
-    "{\n",
-    "\"gluc\": comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes.get('EX_glc__D_e'),\n",
-    "\"oct\": comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes.get('EX_octa_e'),\n",
-    "\"biom\": comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes.get('BIOMASS_KT2440_WT3'),\n",
-    "\"obje\": comp.solutionDict['iJN1462_GLC_UR10_9'].objective_value,\n",
-    "}                   )   \n",
-    "  return df2\n",
-    "\n",
-    "df2 =createOutput(comp)\n",
-    "df2.head()\n",
-    "test = comp.solutionDict['iJN1462_GLC_UR10_9']\n",
-    "#comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes.get('BIOMASS_KT2440_WT3')\n",
-    "print(comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes.get('EX_octa_e'))\n",
-    "#summaryObject.('BIOMASS_KT2440_WT3')\n",
-    "#solutionObject.fluxes.get('BIOMASS_KT2440_WT3')\n",
-    "#solutionObject.fluxes.get('BIOMASS_KT2440_WT3')\n",
-    "#iJN1462_OCT_UR3_4.summary(solution=solutionObject,fva=0.98)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5731133162522243"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.fluxes\n",
-    "test.get_primal_by_id('EX_glc__D_e')\n",
-    "test.objective_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -377,16 +303,16 @@
        "</table>"
       ],
       "text/plain": [
-       "<cobra.summary.model_summary.ModelSummary at 0x7fd521dfc430>"
+       "<cobra.summary.model_summary.ModelSummary at 0x7fd510f67ee0>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "comp\n",
     "'''\n",
     "def createOutputWrapper(modelList):\n",
     "\n",
@@ -427,7 +353,10 @@
     "\n",
     "#iJN1462_OCT_UR3_4.reactions.get_by_id('biomass')\n",
     "#createOutput(iJN1462_GLC_UR10_9)\n",
-    "comp.modelDict['iJN1462_GLC_UR10_9'].summary()"
+    "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_glc__D_e')\n",
+    "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_octa_e')\n",
+    "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_glc__D_e')\n",
+    "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_octa_e')"
    ]
   }
  ],
