--- a/Main.ipynb
+++ b/Main.ipynb
@@ -353,6 +353,7 @@
     "\n",
     "#iJN1462_OCT_UR3_4.reactions.get_by_id('biomass')\n",
     "#createOutput(iJN1462_GLC_UR10_9)\n",
+    "'tets'\n",
     "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_glc__D_e')\n",
     "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_octa_e')\n",
     "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_glc__D_e')\n",
