--- a/Main.ipynb
+++ b/Main.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,49 +45,83 @@
     "    the corresponding fva\n",
     "    input  = list of models\n",
     "    '''\n",
-    "    def __init__( self, modelDict: \"modelDict\", **kwargs ):\n",
-    "        self.modelDict     = modelDict\n",
+    "\n",
+    "    def __init__(self, modelDict: \"modelDict\", **kwargs):\n",
+    "        self.modelDict = modelDict\n",
     "        self.solutionDict = {}\n",
-    "        self.summaryDict   = {}\n",
+    "        self.summaryDict = {}\n",
     "        self.dataFrameDict = {}\n",
     "        self.generate()\n",
-    "            \n",
-    "    #collect the objects of interest\n",
+    "\n",
+    "    # collect the objects of interest\n",
     "    def generate(self):\n",
     "        for model in self.modelDict.keys():\n",
-    "            self.solutionDict[model]    = self.modelDict[model].optimize()\n",
-    "            self.summaryDict[model]     = self.modelDict[model].summary(solution=self.solutionDict[model], fva=.99)\n",
-    "            self.dataFrameDict[model]   = {\n",
-    "                                            \"uptake\"     :   pd.read_html(self.summaryDict[model].to_html())[0].sort_values('C-Flux',ascending=False),\n",
-    "                                            \"seecretion\" :   pd.read_html(self.summaryDict[model].to_html())[1].sort_values('C-Flux',ascending=False)\n",
-    "                                           }\n",
-    "    \n",
-    "    def mySummary(self):\n",
-    "        df2 = pd.DataFrame(\n",
-    "            {\n",
-    "    \"A\": self.summaryDict[model].fluxes.getby,\n",
-    "    \"B\": pd.Timestamp(\"20130102\"),\n",
-    "    \"C\": pd.Series(1, index=list(range(4)), dtype=\"float32\"),\n",
-    "    \"E\": pd.Categorical([\"test\", \"train\", \"test\", \"train\"]),\n",
-    "    \"F\": \"foo\",\n",
+    "            self.solutionDict[model] = self.modelDict[model].optimize()\n",
+    "            self.summaryDict[model] = self.modelDict[model].summary(\n",
+    "                solution=self.solutionDict[model], fva=.99)\n",
+    "            self.dataFrameDict[model] = {\n",
+    "                \"uptake\":   pd.read_html(self.summaryDict[model].to_html())[0].sort_values('C-Flux', ascending=False),\n",
+    "                \"seecretion\":   pd.read_html(self.summaryDict[model].to_html())[1].sort_values('C-Flux', ascending=False)\n",
     "            }\n",
-    "        )\n",
-    "    return df2\n",
-    "          \n",
     "\n",
-    "if 'comp' not in locals():\n",
-    "    comp = ModelComparison(modelDict=modelDict)\n"
+    "    def mySummary(self):\n",
+    "        quantities      = [\"glc\" , \"oct\", \"bio\", \"obj\"]\n",
+    "        ids             = [\"EX_glc__D_e\" ,\"EX_octa_e\", \"BIOMASS_KT2440_WT3\" ]\n",
+    "        pass\n",
+    "        for model in self.modelDict.keys():\n",
+    "            df2 = pd.DataFrame(                \n",
+    "                list(comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes[[\"EX_glc__D_e\" ,\"EX_octa_e\", \"BIOMASS_KT2440_WT3\" ]]), \n",
+    "                quantities\n",
+    "            )\n",
+    "        return df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'get_by_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/wg/bd6gkggs51b4d1lbpsbxnw0r0000gn/T/ipykernel_62636/3032436061.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcomp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmySummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/wg/bd6gkggs51b4d1lbpsbxnw0r0000gn/T/ipykernel_62636/1133645105.py\u001b[0m in \u001b[0;36mmySummary\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     34\u001b[0m                     \u001b[0;34m\"oct\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolutionDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfluxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'EX_octa_e'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m                     \u001b[0;34m\"oct\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolutionDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfluxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'EX_octa_e'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m                     \u001b[0;34m\"bio\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolutionDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfluxes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_by_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'EX_octa_e'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m                     \u001b[0;34m\"obj\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolutionDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfluxes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_by_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'BIOMASS_KT2440_WT3'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m                 }\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/hiwi/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5485\u001b[0m         ):\n\u001b[1;32m   5486\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5487\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5488\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5489\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'get_by_id'"
+     ]
+    }
+   ],
+   "source": [
+    "classes = ['Cat', 'Dog', 'Rabbit']\n",
+    "df = pd.DataFrame([[5, 2, 0], [3, 3, 2], [0, 1, 11]], classes, classes)\n",
+    "df\n",
+    "\n",
+    "comp.mySummary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'comp' not in locals():\n",
+    "    comp = ModelComparison(modelDict=modelDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<h3>Objective</h3><p>1.0 BIOMASS_KT2440_WT3 = 0.5731133162522286</p><h4>Uptake</h4><table border=\"1\" class=\"dataframe\">\n",
+       "<h3>Objective</h3><p>1.0 BIOMASS_KT2440_WT3 = 0.5731133162522261</p><h4>Uptake</h4><table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Metabolite</th>\n",
@@ -303,16 +337,45 @@
        "</table>"
       ],
       "text/plain": [
-       "<cobra.summary.model_summary.ModelSummary at 0x7fd510f67ee0>"
+       "<cobra.summary.model_summary.ModelSummary at 0x7fd522575b50>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "comp\n",
+    "'tets'\n",
+    "#comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_glc__D_e')\n",
+    "#comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_octa_e')\n",
+    "#comp.solutionDict[['iJN1462_GLC_UR10_9']]\n",
+    "b = comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes['EX_glc__D_e']\n",
+    "#comp.solutionDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_octa_e')\n",
+    "a = comp.solutionDict['iJN1462_GLC_UR10_9']\n",
+    "comp.modelDict['iJN1462_GLC_UR10_9'].summary()\n",
+    "comp.mod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ModelComparison' object has no attribute 'my'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/wg/bd6gkggs51b4d1lbpsbxnw0r0000gn/T/ipykernel_62636/3197605351.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcomp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m '''\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcreateOutputWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodelList\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ModelComparison' object has no attribute 'my'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "'''\n",
     "def createOutputWrapper(modelList):\n",
     "\n",
@@ -352,12 +415,7 @@
     "\n",
     "\n",
     "#iJN1462_OCT_UR3_4.reactions.get_by_id('biomass')\n",
-    "#createOutput(iJN1462_GLC_UR10_9)\n",
-    "'tets'\n",
-    "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_glc__D_e')\n",
-    "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_octa_e')\n",
-    "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_glc__D_e')\n",
-    "comp.modelDict['iJN1462_GLC_UR10_9'].fluxes.get_by_id('EX_octa_e')"
+    "#createOutput(iJN1462_GLC_UR10_9)\n"
    ]
   }
  ],
