multiModellSummary, very efficiently implemented

--- a/Main_restructured.ipynb
+++ b/Main_restructured.ipynb
@@ -32,8 +32,8 @@
     "#Load Models if not already in RAM\n",
     "\n",
     "#nameList = ['iJN1462_GLC_UR10_9.xml' , 'iJN1462_GLC_UR6_3.xml', 'iJN1462_GLN_UR5_1.xml', 'iJN1462_GLC_UR7_3.xml' , 'iJN1462_OCT_UR3_4.xml']\n",
-    "#nameList = ['iJN1462_GLC_UR6_3.xml' , 'iJN1462_OCT_UR3_4.xml']\n",
-    "nameList = ['iJN1462_OCT_UR3_4.xml']\n",
+    "nameList = ['iJN1462_GLC_UR6_3.xml' , 'iJN1462_OCT_UR3_4.xml']\n",
+    "#nameList = ['iJN1462_OCT_UR3_4.xml']\n",
     "\n",
     "if 'modelDict' not in locals():\n",
     "    modelDict = ext.ImportFunction(nameList)"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,14 +57,26 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Uptake</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Secretion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>metabolite</th>\n",
+       "      <th>reaction</th>\n",
+       "      <th>flux</th>\n",
+       "      <th>C-Number</th>\n",
+       "      <th>C-Flux</th>\n",
        "      <th>metabolite</th>\n",
        "      <th>reaction</th>\n",
        "      <th>flux</th>\n",
@@ -74,71 +86,216 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>EX_h2o_e</th>\n",
-       "      <td>h2o[e]</td>\n",
-       "      <td>EX_h2o_e</td>\n",
-       "      <td>-11.047772</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EX_co2_e</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">iJN1462_GLC_UR6_3</th>\n",
+       "      <th>0</th>\n",
+       "      <td>glc__D[e]</td>\n",
+       "      <td>EX_glc__D_e</td>\n",
+       "      <td>6.300000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>99.994916</td>\n",
        "      <td>co2[e]</td>\n",
        "      <td>EX_co2_e</td>\n",
-       "      <td>-3.288290</td>\n",
+       "      <td>-13.008062</td>\n",
        "      <td>1</td>\n",
-       "      <td>21.25%</td>\n",
+       "      <td>99.965184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>EX_R_3hocta_e</th>\n",
+       "      <th>1</th>\n",
+       "      <td>pqqA_kt[c]</td>\n",
+       "      <td>SK_pqqA_kt_c</td>\n",
+       "      <td>0.000137</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.005084</td>\n",
+       "      <td>5drib[c]</td>\n",
+       "      <td>DM_5drib_c</td>\n",
+       "      <td>-0.000412</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.015825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>na1[e]</td>\n",
+       "      <td>EX_na1_e</td>\n",
+       "      <td>0.002168</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>amob[c]</td>\n",
+       "      <td>DM_amob_c</td>\n",
+       "      <td>-0.000137</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.015825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>zn2[e]</td>\n",
+       "      <td>EX_zn2_e</td>\n",
+       "      <td>0.001734</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>doxopa[c]</td>\n",
+       "      <td>DM_doxopa_c</td>\n",
+       "      <td>-0.000137</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.003165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>so4[e]</td>\n",
+       "      <td>EX_so4_e</td>\n",
+       "      <td>0.114504</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>tripeptide[c]</td>\n",
+       "      <td>DM_tripeptide_c</td>\n",
+       "      <td>-0.000137</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">iJN1462_OCT_UR3_4</th>\n",
+       "      <th>0</th>\n",
+       "      <td>octa[e]</td>\n",
+       "      <td>EX_octa_e</td>\n",
+       "      <td>3.400000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>99.996657</td>\n",
+       "      <td>C80aPHA[c]</td>\n",
+       "      <td>DM_C80aPHA_c</td>\n",
+       "      <td>-1.117172</td>\n",
+       "      <td>8</td>\n",
+       "      <td>57.758447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pqqA_kt[c]</td>\n",
+       "      <td>SK_pqqA_kt_c</td>\n",
+       "      <td>0.000065</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.003343</td>\n",
+       "      <td>co2[e]</td>\n",
+       "      <td>EX_co2_e</td>\n",
+       "      <td>-3.171260</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20.494490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>nh4[e]</td>\n",
+       "      <td>EX_nh4_e</td>\n",
+       "      <td>3.100000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>R_3hocta[e]</td>\n",
        "      <td>EX_R_3hocta_e</td>\n",
-       "      <td>-1.471243</td>\n",
+       "      <td>-0.377543</td>\n",
        "      <td>8</td>\n",
-       "      <td>76.06%</td>\n",
+       "      <td>19.519175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>EX_h_e</th>\n",
-       "      <td>h[e]</td>\n",
-       "      <td>EX_h_e</td>\n",
-       "      <td>-0.982802</td>\n",
+       "      <th>3</th>\n",
+       "      <td>PHAg[c]</td>\n",
+       "      <td>SK_PHAg_c</td>\n",
+       "      <td>1.117172</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EX_ac_e</th>\n",
+       "      <td>0.000000</td>\n",
        "      <td>ac[e]</td>\n",
        "      <td>EX_ac_e</td>\n",
-       "      <td>-0.199354</td>\n",
+       "      <td>-0.171264</td>\n",
        "      <td>2</td>\n",
-       "      <td>2.58%</td>\n",
+       "      <td>2.213617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>zn2[e]</td>\n",
+       "      <td>EX_zn2_e</td>\n",
+       "      <td>0.000820</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5drib[c]</td>\n",
+       "      <td>DM_5drib_c</td>\n",
+       "      <td>-0.000195</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.006296</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                metabolite       reaction       flux  C-Number  C-Flux\n",
-       "EX_h2o_e            h2o[e]       EX_h2o_e -11.047772         0   0.00%\n",
-       "EX_co2_e            co2[e]       EX_co2_e  -3.288290         1  21.25%\n",
-       "EX_R_3hocta_e  R_3hocta[e]  EX_R_3hocta_e  -1.471243         8  76.06%\n",
-       "EX_h_e                h[e]         EX_h_e  -0.982802         0   0.00%\n",
-       "EX_ac_e              ac[e]        EX_ac_e  -0.199354         2   2.58%"
+       "                         Uptake                                              \\\n",
+       "                     metabolite      reaction      flux C-Number     C-Flux   \n",
+       "iJN1462_GLC_UR6_3 0   glc__D[e]   EX_glc__D_e  6.300000        6  99.994916   \n",
+       "                  1  pqqA_kt[c]  SK_pqqA_kt_c  0.000137       14   0.005084   \n",
+       "                  2      na1[e]      EX_na1_e  0.002168        0   0.000000   \n",
+       "                  3      zn2[e]      EX_zn2_e  0.001734        0   0.000000   \n",
+       "                  4      so4[e]      EX_so4_e  0.114504        0   0.000000   \n",
+       "iJN1462_OCT_UR3_4 0     octa[e]     EX_octa_e  3.400000        8  99.996657   \n",
+       "                  1  pqqA_kt[c]  SK_pqqA_kt_c  0.000065       14   0.003343   \n",
+       "                  2      nh4[e]      EX_nh4_e  3.100000        0   0.000000   \n",
+       "                  3     PHAg[c]     SK_PHAg_c  1.117172        0   0.000000   \n",
+       "                  4      zn2[e]      EX_zn2_e  0.000820        0   0.000000   \n",
+       "\n",
+       "                         Secretion                                       \\\n",
+       "                        metabolite         reaction       flux C-Number   \n",
+       "iJN1462_GLC_UR6_3 0         co2[e]         EX_co2_e -13.008062        1   \n",
+       "                  1       5drib[c]       DM_5drib_c  -0.000412        5   \n",
+       "                  2        amob[c]        DM_amob_c  -0.000137       15   \n",
+       "                  3      doxopa[c]      DM_doxopa_c  -0.000137        3   \n",
+       "                  4  tripeptide[c]  DM_tripeptide_c  -0.000137        0   \n",
+       "iJN1462_OCT_UR3_4 0     C80aPHA[c]     DM_C80aPHA_c  -1.117172        8   \n",
+       "                  1         co2[e]         EX_co2_e  -3.171260        1   \n",
+       "                  2    R_3hocta[e]    EX_R_3hocta_e  -0.377543        8   \n",
+       "                  3          ac[e]          EX_ac_e  -0.171264        2   \n",
+       "                  4       5drib[c]       DM_5drib_c  -0.000195        5   \n",
+       "\n",
+       "                                \n",
+       "                        C-Flux  \n",
+       "iJN1462_GLC_UR6_3 0  99.965184  \n",
+       "                  1   0.015825  \n",
+       "                  2   0.015825  \n",
+       "                  3   0.003165  \n",
+       "                  4   0.000000  \n",
+       "iJN1462_OCT_UR3_4 0  57.758447  \n",
+       "                  1  20.494490  \n",
+       "                  2  19.519175  \n",
+       "                  3   2.213617  \n",
+       "                  4   0.006296  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import extFunc as ext\n",
+    "if 'glc_oct_comp'  not in locals():\n",
+    "    glc_oct_comp = ext.ModelComparison(modelDict=modelDict)\n",
     "\n",
-    "solution = modelDict['iJN1462_OCT_UR3_4'].optimize()\n",
-    "a = modelDict['iJN1462_OCT_UR3_4'].summary(solution=solution).to_DataFrame_custom()\n",
+    "#import extFunc as ext\n",
     "\n",
-    "a.keys()\n",
-    "a['secretion'].sort_values('flux', ascending=True).iloc[0:5]"
+    "\n",
+    "#a.keys()\n",
+    "#a['secretion'].sort_values('flux', ascending=True).iloc[0:5].reset_index(drop=True)\n",
+    "\n",
+    "glc_oct_comp.multiModellSummary(sortKrit='C-Flux')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a\\nb']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ['a' +'\\n' +'b']\n",
+    "print(a)"
    ]
   }
  ],
