--- a/Main_restructured.ipynb
+++ b/Main_restructured.ipynb
@@ -10,7 +10,10 @@
     "import numpy as np\n",
     "from importlib import import_module\n",
     "import pandas as pd \n",
-    "import copy \n"
+    "import cobra\n",
+    "import optlang\n",
+    "import copy \n",
+    "import random"
    ]
   },
   {
@@ -284,18 +287,245 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "nameList = ['iJN1462_OCT_UR3_4.xml']\n",
+    "modelDict = ext.ImportFunction(nameList)\n",
+    "solutionDict = {'fba'                :  modelDict['iJN1462_OCT_UR3_4'].optimize() ,\n",
+    "                'pfba'               :  cobra.flux_analysis.pfba(modelDict['iJN1462_OCT_UR3_4']),\n",
+    "                #'geom_fba'           :  cobra.flux_analysis.geometric_fba(modelDict['iJN1462_OCT_UR3_4']),\n",
+    "                #'looples_cla'        :  cobra.flux_analysis.loopless.add_loopless(modelDict['iJN1462_OCT_UR3_4']).optimize(),\n",
+    "                #'CylceFreeFlux_algo' :  cobra.flux_analysis.loopless.loopless_solution(modelDict['iJN1462_OCT_UR3_4']),\n",
+    "                }\n",
+    "\n",
+    "single_Model_comp = ext.ModelComparison(modelDict=modelDict)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a\\nb']\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Uptake</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Secretion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>metabolite</th>\n",
+       "      <th>reaction</th>\n",
+       "      <th>flux</th>\n",
+       "      <th>C-Number</th>\n",
+       "      <th>C-Flux</th>\n",
+       "      <th>metabolite</th>\n",
+       "      <th>reaction</th>\n",
+       "      <th>flux</th>\n",
+       "      <th>C-Number</th>\n",
+       "      <th>C-Flux</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">fba</th>\n",
+       "      <th>0</th>\n",
+       "      <td>octa[e]</td>\n",
+       "      <td>EX_octa_e</td>\n",
+       "      <td>3.400000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>99.996657</td>\n",
+       "      <td>R_3hocta[e]</td>\n",
+       "      <td>EX_R_3hocta_e</td>\n",
+       "      <td>-1.365554</td>\n",
+       "      <td>8</td>\n",
+       "      <td>70.599928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pqqA_kt[c]</td>\n",
+       "      <td>SK_pqqA_kt_c</td>\n",
+       "      <td>0.000065</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.003343</td>\n",
+       "      <td>co2[e]</td>\n",
+       "      <td>EX_co2_e</td>\n",
+       "      <td>-3.898971</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25.197379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cl[e]</td>\n",
+       "      <td>EX_cl_e</td>\n",
+       "      <td>0.001231</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>ac[e]</td>\n",
+       "      <td>EX_ac_e</td>\n",
+       "      <td>-0.323793</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.185065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>zn2[e]</td>\n",
+       "      <td>EX_zn2_e</td>\n",
+       "      <td>0.000820</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5drib[c]</td>\n",
+       "      <td>DM_5drib_c</td>\n",
+       "      <td>-0.000195</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.006296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>so4[e]</td>\n",
+       "      <td>EX_so4_e</td>\n",
+       "      <td>0.054169</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>amob[c]</td>\n",
+       "      <td>DM_amob_c</td>\n",
+       "      <td>-0.000065</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.006296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">pfba</th>\n",
+       "      <th>0</th>\n",
+       "      <td>octa[e]</td>\n",
+       "      <td>EX_octa_e</td>\n",
+       "      <td>3.400000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>99.996657</td>\n",
+       "      <td>C80aPHA[c]</td>\n",
+       "      <td>DM_C80aPHA_c</td>\n",
+       "      <td>-1.117172</td>\n",
+       "      <td>8</td>\n",
+       "      <td>57.758447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pqqA_kt[c]</td>\n",
+       "      <td>SK_pqqA_kt_c</td>\n",
+       "      <td>0.000065</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.003343</td>\n",
+       "      <td>co2[e]</td>\n",
+       "      <td>EX_co2_e</td>\n",
+       "      <td>-3.171260</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20.494490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>nh4[e]</td>\n",
+       "      <td>EX_nh4_e</td>\n",
+       "      <td>3.100000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>R_3hocta[e]</td>\n",
+       "      <td>EX_R_3hocta_e</td>\n",
+       "      <td>-0.377543</td>\n",
+       "      <td>8</td>\n",
+       "      <td>19.519175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PHAg[c]</td>\n",
+       "      <td>SK_PHAg_c</td>\n",
+       "      <td>1.117172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>ac[e]</td>\n",
+       "      <td>EX_ac_e</td>\n",
+       "      <td>-0.171264</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.213617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>zn2[e]</td>\n",
+       "      <td>EX_zn2_e</td>\n",
+       "      <td>0.000820</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5drib[c]</td>\n",
+       "      <td>DM_5drib_c</td>\n",
+       "      <td>-0.000195</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.006296</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Uptake                                                Secretion  \\\n",
+       "        metabolite      reaction      flux C-Number     C-Flux   metabolite   \n",
+       "fba  0     octa[e]     EX_octa_e  3.400000        8  99.996657  R_3hocta[e]   \n",
+       "     1  pqqA_kt[c]  SK_pqqA_kt_c  0.000065       14   0.003343       co2[e]   \n",
+       "     2       cl[e]       EX_cl_e  0.001231        0   0.000000        ac[e]   \n",
+       "     3      zn2[e]      EX_zn2_e  0.000820        0   0.000000     5drib[c]   \n",
+       "     4      so4[e]      EX_so4_e  0.054169        0   0.000000      amob[c]   \n",
+       "pfba 0     octa[e]     EX_octa_e  3.400000        8  99.996657   C80aPHA[c]   \n",
+       "     1  pqqA_kt[c]  SK_pqqA_kt_c  0.000065       14   0.003343       co2[e]   \n",
+       "     2      nh4[e]      EX_nh4_e  3.100000        0   0.000000  R_3hocta[e]   \n",
+       "     3     PHAg[c]     SK_PHAg_c  1.117172        0   0.000000        ac[e]   \n",
+       "     4      zn2[e]      EX_zn2_e  0.000820        0   0.000000     5drib[c]   \n",
+       "\n",
+       "                                                     \n",
+       "             reaction      flux C-Number     C-Flux  \n",
+       "fba  0  EX_R_3hocta_e -1.365554        8  70.599928  \n",
+       "     1       EX_co2_e -3.898971        1  25.197379  \n",
+       "     2        EX_ac_e -0.323793        2   4.185065  \n",
+       "     3     DM_5drib_c -0.000195        5   0.006296  \n",
+       "     4      DM_amob_c -0.000065       15   0.006296  \n",
+       "pfba 0   DM_C80aPHA_c -1.117172        8  57.758447  \n",
+       "     1       EX_co2_e -3.171260        1  20.494490  \n",
+       "     2  EX_R_3hocta_e -0.377543        8  19.519175  \n",
+       "     3        EX_ac_e -0.171264        2   2.213617  \n",
+       "     4     DM_5drib_c -0.000195        5   0.006296  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = ['a' +'\\n' +'b']\n",
-    "print(a)"
+    "# Comment an Franzi, wenn summary Methode aufgerufen wir, wird automatisch pFBA ausgeführt daher untershiede im ergebniss\n",
+    "# zwischen fba und pfba, kurzum: gba result liefert gar keine DM_80aPHA_c\n",
+    "# fba -->       Maximierung der Zielfunktion, thats it\n",
+    "# pfba -->      Maximierung der Zielfunktion, und minimierung der Summe aller Flüsse\n",
+    "# geometric --> Geometric FBA finds a unique optimal flux distribution which is central to the range of possible fluxes.\n",
+    "# pfba --> Maximierung der Zielfunktion, und minimierung der Summe aller Flüsse\n",
+    "\n",
+    "single_Model_comp.singleModellSummary(solutionDict)"
    ]
   }
  ],
